# blog

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: django.yml  react.yml
Django/BlogDjango/: db.sqlite3
Django/BlogDjango/BlogDjango/: settings.py  test.py  urls.py
Django/BlogDjango/authorization/: admin.py  models.py  serializer.py  urls.py  views.py
Django/BlogDjango/authorization/migrations/: 0001_initial.py
Django/BlogDjango/backend_api/: admin.py  models.py  serializer.py  tests.py  urls.py  utils.py  views.py
Django/BlogDjango/backend_api/migrations/: 0001_initial.py  0002_remove_post_date_remove_post_description_and_more.py  0003_post_image.py  0004_rename_post_post_description.py  0005_category_post_category.py  0006_remove_tag_posts_post_tags.py  0007_image_remove_post_image_post_images.py  0008_remove_post_images_post_image_delete_image.py  0009_alter_post_image.py  0010_alter_post_image.py  0011_comment.py  (+4 more)
Django/BlogDjango/blog/: models.py
reactfrontend/: package-lock.json  package.json
reactfrontend/src/: App.tsx  AuthPage.tsx  BlogPage.tsx  CreatePostPage.tsx  DailyChallengePage.tsx  DetailPostPage.tsx  HomePage.tsx  PostByTagPage.tsx  ProfilePage.tsx  RegisterPage.tsx  models.tsx
reactfrontend/src/components/: categoryBar.tsx  comment.tsx  displaySamePost.tsx  editPostModal(notUserYet).tsx  favoriteBtn.tsx  footer.tsx  navbar.tsx  post.tsx  product.tsx  tagsBar.tsx  uploadProfileImageModal.tsx
reactfrontend/src/style/: blogpage.css  detailPostPage.css  navbar.css  post.css  profile.css  tagsBar.css
(+2 files in other folders)
